@@ -17,6 +17,7 @@ Not yet released.
 - Extensions:
   * ext.sqlalchemy.fields now has an additional QuerySelectMultipleField, and
     all fields can now support multiple-column primary keys.
+  * ext.sqlalchemy.orm contains tools for making forms from ORM models.
   * Added ext.dateutil for flexible date-time parsing.
   * Added ext.appengine contributed by Rodrigo Moraes.
 
